--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-toastify": "^4.1.0",
     "axios": "^1.5.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
