--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@jsonforms/core": "3.1.0",
+    "@jsonforms/core": "^3.1.0",
     "@jsonforms/material-renderers": "3.1.0",
     "@jsonforms/react": "3.1.0",
     "@mui/icons-material": "~5.11.16",
