--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.1.0",
     "axios": "^1.5.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.47.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.200",
     "react-scripts": "^5.0.1",
     "start-server-and-test": "^1.11.6"
   },
