--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.1.0",
+    "@types/webpack-env": "^1.18.3",
     "axios": "^1.5.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
