--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@jsonforms/core": "^3.1.0",
+    "@jsonforms/core": "3.1.0",
     "@jsonforms/material-renderers": "3.1.0",
     "@jsonforms/react": "3.1.0",
     "@mui/icons-material": "~5.11.16",
@@ -17,12 +17,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-toastify": "^4.1.0",
-    "@types/webpack-env": "^1.18.3",
     "axios": "^1.5.0",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
@@ -31,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.200",
+    "@types/webpack-env": "^1.18.3",
     "react-scripts": "^5.0.1",
     "start-server-and-test": "^1.11.6"
   },
