--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-REACT_APP_API_BASE_ADDR=http://localhost:3333/
+BACKEND_BASE_URL=localhost
+BACKEND_API_VERSION=v1
+TYPE_ENVIROMENT=PRODUCTION
+BACKEND_METHOD_HTTP=http
+BACKEND_PORT=3001
+FRONTEND_PORT=8080
