--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-date-pickers": "^6.5.0",
     "@types/node": "^14.14.14",
+    "@types/webpack-env": "^1.18.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
