--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-BACKEND_BASE_URL=54.91.238.131
+# BACKEND_BASE_URL=54.91.238.131
+BACKEND_BASE_URL=localhost
 BACKEND_API_VERSION=v1
 TYPE_ENVIROMENT=PRODUCTION
 BACKEND_METHOD_HTTP=http
